--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install: luarocks install --local luacheck
 
 script: /home/travis/.luarocks/bin/luacheck . --no-color -q
  
-after-success:
+after_success:
   - curl -s https://raw.githubusercontent.com/BigWigsMods/packager/master/release.sh | bash
  
 branches:
